# cb-svdpp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/bakeoff/: README.md
artifacts/benchmarks/: README.md
artifacts/debug/: README.md
artifacts/figures/: README.md
artifacts/local/: README.md
artifacts/reports/: kernel_cost_anatomy.csv  performance_hotspots.csv  performance_stage_breakdown.csv
artifacts/runs/: README.md
configs/: README.md
configs/data/: movielens_100k.yaml  movielens_10m.yaml  (+3 more)
data/: README.md
docs/: architecture.md  data_and_split_contract.md  environment_contract.md  evaluation_protocol.md  kernel_cost_anatomy.md  kernel_optimization_plan.md  manifest_contract.md  naming_conventions.md  performance_forensics.md  project_master_plan.md  publish_readiness_matrix.md  repo_governance.md  research_integrity.md  unified_experiment_framework.md
schema/: README.md
scripts/: README.md  benchmark_ml100k_paper.ps1  benchmark_ml100k_paper_multiseed.ps1  bootstrap.ps1  bootstrap.sh  collect_kernel_profiles.py  collect_performance_profiles.py  collect_results.py  compare_kernel_benchmarks.py  compare_real_run_metrics.py  plan_sota_tuning_study.py  plan_tuning_study.py  prepare_dataset.ps1  profile_cluster_artifacts.py  run_experiment.ps1  run_kernel_benchmarks.py  run_ml1m_fidelity_promotion.py  run_ml1m_final_bakeoff.py  run_ml1m_selected_candidate_bakeoff.py  run_sota_tuning_pilot.py  run_tuning_candidate_smoke.py  run_tuning_mini_study.py  train_asvdpp.ps1  train_asvdpp.sh  train_asymmetric_svd.ps1  train_asymmetric_svd.sh  train_biased_mf.ps1  train_biased_mf.sh  train_cb_svdpp.ps1  train_cb_svdpp.sh  train_svdpp.ps1  train_svdpp.sh  tune_ml100k_inner.ps1  validate_manifest.ps1
tests/: README.md  __init__.py
(+415 files in other folders)
